⬇️ refractor: downgrade Java language level for Java 10 compatibility